# Native_Managed

./: .gitignore  CMakeLists.txt  Directory.Build.props  Native_Managed.sln  ReadMe.md  build-native.sh  nuget-test.config
.azure/pipelines/: ci.yml
.azure/pipelines/jobs/: build_and_test.yml  build_native.yml  test_package.yml
.azure/pipelines/jobs/steps/: dotnet-install.yml
source/Managed/: Managed.csproj  Math.cs  Native.cs
source/Managed/Native/: Native.net50.cs  Native.net60.cs  Native.net70.cs  Native.netstandard21.cs
source/Native/: CMakeLists.txt  dll.h  math.cpp  math.h  version.cpp.in  version.h
tests/: Directory.Build.props
tests/Managed.Tests/: Managed.Tests.csproj
tests/Managed.Tests.Package/: Managed.Tests.Package.csproj
tests/Managed.Tests/MathTests/: Add.cs  MetaInfos.cs  Sum.cs
